--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -55,6 +55,11 @@
     width: 1px
     background-color: $red
     margin-top: -3px
+
+.hover-underline:hover
+    text-decoration: underline
+    color: $red !important
+
 @media only screen and (min-width: 990px) and (max-width: 1024px)
     .momento-2-toggle
         top: 9vh
